--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,11 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
+### Yeoman template
+node_modules/
+bower_components/
+
+build/
+dist/
+
+
