--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,11 @@
   ],
   "dependencies": {
     "virtual-dom": "~2.1.1"
+  },
+  "private": true,
+  "version": "0.0.0",
+  "devDependencies": {
+    "chai": "~3.4.2",
+    "mocha": "~2.3.4"
   }
 }
