--- a/package.json
+++ b/package.json
@@ -6,20 +6,34 @@
   "scripts": {
     "test": "luffa"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/phodal/luffa.git"
+  "private": true,
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "babel-preset-es2015": "^6.1.4",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-uglify": "~0.10.0",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-connect": "~0.11.2",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-htmlmin": "~0.6.0",
+    "grunt-bower-install": "~1.6.0",
+    "grunt-contrib-imagemin": "~1.0.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-usemin": "~3.1.1",
+    "grunt-mocha": "~0.4.13",
+    "grunt-svgmin": "~3.0.0",
+    "grunt-concurrent": "~2.0.4",
+    "jit-grunt": "^0.9.1",
+    "time-grunt": "~1.2.2",
+    "jshint-stylish": "~2.0.1",
+    "grunt-chrome-manifest": "~0.3.0",
+    "grunt-contrib-compress": "~0.14.0"
   },
-  "keywords": [
-    "Test",
-    "Framework",
-    "Test",
-    "Helper"
-  ],
-  "author": "Phodal Huang",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/phodal/luffa/issues"
-  },
-  "homepage": "https://github.com/phodal/luffa#readme"
+  "engines": {
+    "node": ">=0.8.0"
+  }
 }
