--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "Luffa",
   "version": "0.0.2",
   "manifest_version": 2,
-  "description": "Luffa",
+  "description": "A Test Framework Helper",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
