--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "luffa",
+  "name": "luffa-chrome",
   "version": "0.0.0",
   "description": "A Test Framework",
   "main": "index.js",
